--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -29,5 +29,16 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "5.7.3"
+  },
+  "dependencies": {
+    "@icons-pack/react-simple-icons": "^11.2.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@types/next": "^9.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.1",
+    "lucide-react": "^0.475.0",
+    "next": "^15.1.6",
+    "tailwind-merge": "^3.0.1"
   }
 }
