--- a/portfolio/.gitignore
+++ b/portfolio/.gitignore
@@ -1,7 +1,38 @@
+# dependencies
 node_modules
-node_modules/*
+.pnp
+.pnp.js
+.nvmrc
 dist/
+
+# testing
+coverage
+
+# next.js
 .next/
-.env
-.env.local
+out/
+build
+
+# misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# turbo
+.turbo
+
+.env
+.vercel
+.vscode
+.env*.local
