--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -26,9 +26,9 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.4",
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "5.7.3"
