--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint",
     "build:css": "tailwindcss -i ./src/globals.css -o ./dist/globals.css",
     "watch:css": "tailwindcss -i ./src/globals.css -o ./dist/globals.css --watch"
