--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,49 @@
-# Dependencies
-node_modules/
-**/node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
 .pnpm-store/
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
 .next/
-.pnp
-.pnp.js
-dist/
-
-# Testing
-coverage/
-
-# Next.js
+/.next/
 out/
-build/
+/out/
 
-# Misc
+# production
+/build
+
+# misc
 .DS_Store
 *.pem
 
-# Debug
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # IDE
 .vscode/
 .idea/
 
+# env files (can opt-in for committing if needed)
+.env*
+
 # Build
 .turbo
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
