--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 engine-strict=true
-use-node-version=23.7.0
-pnpm-version=10.4.1
+use-node-version=20.18.1
+pnpm-version=9.15.0
+save-exact=true
+package-lock=true
